# SOURCE-OF-TRUTH

./: .env.example  .gitignore  CHANGES_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOY.md  DEPLOYMENT_ARCHITECTURE.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INDEX.txt  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.txt  DEPLOY_RAILWAY.md  DEPLOY_RENDER.md  DOCUMENTATION_INDEX.md  FEATURE_RESTORATION_PLAN.md  FINAL_README.md  FREE_TIER_ANALYSIS.md  FRESHNESS_RANKING_IMPLEMENTATION.md  INGESTION_OPTIMIZATION_GUIDE.md  LAST_UPDATE_METRIC_FIXES.md  LICENSE  LIGHTWEIGHT_SCHEDULER_GUIDE.md  MAINTENANCE_GUIDE.md  MIGRATION_GUIDE.md  Makefile  NEXT_STEPS.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_ENABLE_GUIDE.md  RANKING_ANALYSIS_REPORT.md  RANKING_QUICK_REFERENCE.md  README.md  README_DEPLOYMENT.md  README_UPDATED.md  SESSION_SUMMARY.md  START_HERE.md  UPGRADE_COMPARISON.md  UPGRADE_SUMMARY.md  (+7 more)
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/core/: json_utils.py  memory_utils.py  retry_utils.py
backend/scripts/: README.md  backfill_conflict_excerpts.py  backfill_conflicts.py  backfill_importance.py  migrate_sqlite_to_postgres.py  populate_conflicts_data.sql
backend/tests/: __init__.py  test_bias.py  test_coherence.py  test_conflict_explanation.py  test_embedding_optimizations.py  test_fact_check.py  test_normalize.py  test_optimizations.py  test_pipeline_optimizations.py  test_score.py  test_underreported.py
docs/: api.md  (+4 more)
(+106 files in other folders)
